<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_list_news">

    <fragment
        android:id="@+id/navigation_list_news"
        android:name="com.example.perludilindungi.ui.news.ListNewsFragment"
        android:label="@string/title_news"
        tools:layout="@layout/fragment_list_news">
        <action
            android:id="@+id/action_navigation_list_news_to_navigation_detail_news"
            app:destination="@id/navigation_detail_news" />
    </fragment>

    <fragment
        android:id="@+id/navigation_vaccine"
        android:name="com.example.perludilindungi.ui.vaccine.ListVaccineFragment"
        android:label="@string/title_vaccine"
        tools:layout="@layout/fragment_list_vaccine" />

    <fragment
        android:id="@+id/navigation_bookmarks"
        android:name="com.example.perludilindungi.ui.bookmark.BookmarkFragment"
        android:label="@string/title_bookmark"
        tools:layout="@layout/fragment_bookmark" />
    <fragment
        android:id="@+id/navigation_detail_news"
        android:name="com.example.perludilindungi.ui.news.DetailNewsFragment"
        android:label="@string/title_detail_news"
        tools:layout="@layout/fragment_detail_news">
        <argument
            android:name="url"
            android:defaultValue="https://www.google.com"
            app:argType="string" />
    </fragment>
</navigation>